--- a/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
+++ b/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
@@ -808,7 +808,7 @@ Working On?</string>
                                     <constraint firstItem="kaX-Kk-7pV" firstAttribute="top" secondItem="0Oc-ON-Kbg" secondAttribute="top" id="uyC-bn-L5z"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EH5-Cg-2iE">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EH5-Cg-2iE">
                                 <rect key="frame" x="319" y="369" width="56" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="56" id="IHp-Wi-wAb"/>
