--- a/Modacity/Modacity/Base.lproj/Main.storyboard
+++ b/Modacity/Modacity/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87D-AM-Dd3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87D-AM-Dd3">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -33,11 +33,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_intro" translatesAutoresizingMaskIntoConstraints="NO" id="ZKJ-EZ-II1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_premium_firstpage" translatesAutoresizingMaskIntoConstraints="NO" id="ZKJ-EZ-II1">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="818"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo_welcome" translatesAutoresizingMaskIntoConstraints="NO" id="sfh-XF-fsR">
-                                <rect key="frame" x="122" y="337.66666666666669" width="131" height="147"/>
+                                <rect key="frame" x="122" y="339.33333333333331" width="131" height="144"/>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="IeJ-d7-9CU">
                                 <rect key="frame" x="177" y="711" width="20" height="20"/>
@@ -82,7 +82,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bg_intro" width="375" height="667"/>
-        <image name="img_logo_welcome" width="131" height="147"/>
+        <image name="bg_premium_firstpage" width="375" height="667"/>
+        <image name="img_logo_welcome" width="131" height="144"/>
     </resources>
 </document>
