Fixed optional label show/hide for practice item manul update.

--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -643,6 +643,8 @@
                         <outlet property="labelItemNameCaption" destination="pbA-dj-7ey" id="dRd-TF-ZzK"/>
                         <outlet property="labelPlaylist" destination="gdp-3l-Q4y" id="vUh-8L-Dm5"/>
                         <outlet property="labelPlaylistCaption" destination="ZXJ-sp-tTa" id="ZOg-7h-Ngq"/>
+                        <outlet property="labelPlaylistItemOptional" destination="y9Y-vz-zTA" id="1VI-Cu-bI4"/>
+                        <outlet property="labelPracticeItemOptional" destination="3lb-cF-xv5" id="Imi-ls-XmP"/>
                         <outlet property="labelTitle" destination="hAz-eI-ef2" id="WWr-HH-t3T"/>
                         <outlet property="labelTotalDate" destination="Rfa-rE-d20" id="GQN-nR-DjI"/>
                         <outlet property="labelTotalTime" destination="VQB-zG-3Sb" id="TNB-HX-Gzp"/>
