Fixed long name for practice item or playlist item.

--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -420,8 +420,8 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J0v-97-ozb">
                                                 <rect key="frame" x="36" y="191" width="248" height="48"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y4t-gg-gsi">
-                                                        <rect key="frame" x="10" y="16" width="37.5" height="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Select" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y4t-gg-gsi">
+                                                        <rect key="frame" x="10" y="16" width="177.5" height="17"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                         <color key="textColor" red="0.5725490196078431" green="0.57647058823529407" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -446,6 +446,7 @@
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="Oay-Gk-el4" firstAttribute="top" secondItem="J0v-97-ozb" secondAttribute="top" id="BTw-3r-m4v"/>
+                                                    <constraint firstItem="3lb-cF-xv5" firstAttribute="leading" secondItem="y4t-gg-gsi" secondAttribute="trailing" constant="5" id="CMa-5x-tfa"/>
                                                     <constraint firstItem="HHE-Aj-n36" firstAttribute="centerY" secondItem="J0v-97-ozb" secondAttribute="centerY" id="CQs-PJ-b9P"/>
                                                     <constraint firstItem="3lb-cF-xv5" firstAttribute="centerY" secondItem="J0v-97-ozb" secondAttribute="centerY" id="DAp-2x-mwP"/>
                                                     <constraint firstAttribute="bottom" secondItem="Oay-Gk-el4" secondAttribute="bottom" id="L8r-CC-l1l"/>
@@ -467,8 +468,8 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9t-rz-nJ7">
                                                 <rect key="frame" x="36" y="269" width="248" height="48"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdp-3l-Q4y">
-                                                        <rect key="frame" x="10" y="16" width="37.5" height="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Select" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdp-3l-Q4y">
+                                                        <rect key="frame" x="10" y="15.5" width="177.5" height="17"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                         <color key="textColor" red="0.5725490196078431" green="0.57647058823529407" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -493,6 +494,7 @@
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="wdA-MU-qo7" firstAttribute="leading" secondItem="y9Y-vz-zTA" secondAttribute="trailing" constant="5" id="50R-9p-rcr"/>
+                                                    <constraint firstItem="y9Y-vz-zTA" firstAttribute="leading" secondItem="gdp-3l-Q4y" secondAttribute="trailing" constant="5" id="Jk9-6e-1jV"/>
                                                     <constraint firstAttribute="bottom" secondItem="wsP-vM-K5n" secondAttribute="bottom" id="K5z-zi-s8C"/>
                                                     <constraint firstItem="gdp-3l-Q4y" firstAttribute="centerY" secondItem="I9t-rz-nJ7" secondAttribute="centerY" id="KZe-Yu-bdj"/>
                                                     <constraint firstAttribute="trailing" secondItem="wdA-MU-qo7" secondAttribute="trailing" constant="10" id="TWA-ZL-2wY"/>
